services/educs/topology/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: educs-backend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    spec:
      imagePullSecrets:
        - name: docker-auth
      containers:
      - name: educs-backend
        image: ghcr.io/cguertin14/educs-backend
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "200Mi"
            cpu: "125m"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 80
          initialDelaySeconds: 100
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/health
            port: 80
          initialDelaySeconds: 80
          periodSeconds: 10
