services/educs/topology/backend/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: educs-backend
spec:
  hostnames:
  - api.erabliereducoeursucre.com
  parentRefs:
  - name: main-gateway
    namespace: envoy-gateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: educs-backend
      port: 80
