services/educs/topology/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: educs-backend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer-educs"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.erabliereducoeursucre.com
    secretName: educs-backend-cert
  rules:
  - host: api.erabliereducoeursucre.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: educs-backend
            port: 
              name: http
